# AutoComplete

./: .auto.cpp.swp  CMakeLists.txt  FlowChart.ods  README.md  auto.cpp  auto.cpp~  autoCompleteConfig.h.in  flowChart.html  index.html  params.json  sampleInput.txt  te.txt
test/: file.txt
